# rust-book

./: .cursorignore  .gitignore  PLAN.md  README.md  _sidebar.md  index.html
assets/: custom.css  toolbar.js
code/: Cargo.toml
code/async-basics/: Cargo.toml
code/async-basics/src/: main.rs
code/async-notify-watch/: Cargo.toml
code/async-notify-watch/src/: main.rs
code/async-service-lifecycle/: Cargo.toml
code/async-service-lifecycle/src/: main.rs
code/async-shared-state/: Cargo.toml
code/async-shared-state/src/: main.rs
code/async-task-control/: Cargo.toml
code/async-task-control/src/: main.rs
code/async-tokio/: Cargo.toml
code/async-tokio/src/: main.rs
code/concurrency-threads/: Cargo.toml
code/concurrency-threads/src/: main.rs
code/engineering-network-testing/: Cargo.toml
code/engineering-network-testing/src/: lib.rs
code/engineering-network-testing/tests/: http_failure_test.rs  udp_failure_test.rs
code/engineering-testing/: Cargo.toml
code/engineering-testing/src/: api.rs  cache.rs  calc.rs  lib.rs
code/engineering-testing/tests/: api_test.rs  cache_test.rs  calc_test.rs
code/engineering-tracing/: Cargo.toml
code/engineering-tracing/src/: main.rs
code/http-arcswap/: Cargo.toml
code/http-arcswap/src/: handler.rs  lib.rs  main.rs  state.rs  updater.rs
code/http-http-from-scratch/: Cargo.toml
code/http-http-from-scratch/src/: handler.rs  lib.rs  main.rs  state.rs  updater.rs
code/http-middleware-shutdown/: Cargo.toml
code/http-middleware-shutdown/src/: main.rs
code/http-redis/: Cargo.toml
code/http-redis-cluster/: Cargo.toml
code/http-redis-cluster/src/: main.rs
code/http-redis/src/: error.rs  handler.rs  lib.rs  main.rs  state.rs
code/http-reqwest-resilience/: Cargo.toml
code/http-reqwest-resilience/src/: main.rs
code/http-rest/: Cargo.toml
code/http-rest/src/: handler.rs  lib.rs  main.rs  state.rs
code/http-serde-json/: Cargo.toml
code/http-serde-json/src/: main.rs
code/http-sqlx/: Cargo.toml
code/http-sqlx/src/: main.rs
code/labkit/: Cargo.toml
code/labkit/src/: lib.rs
code/lang-basics/: Cargo.toml
code/lang-basics/src/: main.rs
code/lang-collections/: Cargo.toml
code/lang-collections/src/: main.rs
code/lang-control-flow/: Cargo.toml
code/lang-control-flow/src/: main.rs
code/lang-error-handling/: Cargo.toml
code/lang-error-handling/src/: main.rs
code/lang-functions-closures/: Cargo.toml
code/lang-functions-closures/src/: main.rs
code/lang-generics/: Cargo.toml
code/lang-generics/src/: main.rs
code/lang-iterators/: Cargo.toml
code/lang-iterators/src/: main.rs
code/lang-lifetimes/: Cargo.toml
code/lang-lifetimes/src/: main.rs
code/lang-modules/: Cargo.toml
code/lang-modules/src/: main.rs
code/lang-ownership/: Cargo.toml
code/lang-ownership/src/: main.rs
code/lang-pattern-matching/: Cargo.toml
code/lang-pattern-matching/src/: main.rs
code/lang-smart-pointers/: Cargo.toml
code/lang-smart-pointers/src/: main.rs
code/lang-strings-slices/: Cargo.toml
code/lang-strings-slices/src/: main.rs
code/lang-types-traits/: Cargo.toml
code/lang-types-traits/src/: main.rs
code/network-addressing/: Cargo.toml
code/network-addressing/src/: main.rs
code/network-debug-tools/: Cargo.toml
code/network-debug-tools/src/: main.rs
code/network-http-protocol/: Cargo.toml
code/network-http-protocol/src/: main.rs
code/network-layers/: Cargo.toml
code/network-layers/src/: main.rs
code/network-load-balancing/: Cargo.toml
code/network-load-balancing/src/: main.rs
code/network-mqtt/: Cargo.toml
code/network-mqtt/src/: main.rs
code/network-proxy-nat/: Cargo.toml
code/network-proxy-nat/src/: main.rs
code/network-quic-http3/: Cargo.toml
code/network-quic-http3/src/: main.rs
code/network-rpc-grpc/: Cargo.toml  build.rs
code/network-rpc-grpc/proto/: helloworld.proto
code/network-rpc-grpc/src/: main.rs
code/network-socket/: Cargo.toml
code/network-socket/src/: main.rs
code/network-tcp/: Cargo.toml
code/network-tcp/src/: main.rs
code/network-timeouts-retries/: Cargo.toml
code/network-timeouts-retries/src/: main.rs
code/network-tls/: Cargo.toml
code/network-tls/src/: main.rs
code/network-udp-sockets/: Cargo.toml
code/network-udp-sockets/src/: main.rs
code/network-websocket/: Cargo.toml
code/network-websocket/src/: main.rs
code/os-blocking-io/: Cargo.toml
code/os-blocking-io/src/: main.rs
code/os-cgroup-container/: Cargo.toml
code/os-cgroup-container/src/: main.rs
code/os-computer-basics/: Cargo.toml
code/os-computer-basics/src/: main.rs
code/os-coroutine-state/: Cargo.toml
code/os-coroutine-state/src/: main.rs
code/os-cpu-memory/: Cargo.toml
code/os-cpu-memory/src/: main.rs
code/os-disk-io/: Cargo.toml
code/os-disk-io/src/: main.rs
code/os-file-fd/: Cargo.toml
code/os-file-fd/src/: main.rs
code/os-perf-cost/: Cargo.toml
code/os-perf-cost/src/: main.rs
code/os-process-thread/: Cargo.toml
code/os-process-thread/src/: main.rs
code/os-scheduling/: Cargo.toml
code/os-scheduling/src/: main.rs
code/os-signals-lifecycle/: Cargo.toml
code/os-signals-lifecycle/src/: main.rs
code/os-sync-primitives/: Cargo.toml
code/os-sync-primitives/src/: main.rs
code/os-time-clock/: Cargo.toml
code/os-time-clock/src/: main.rs
code/os-user-kernel/: Cargo.toml
code/os-user-kernel/src/: main.rs
code/os-virtual-memory/: Cargo.toml
code/os-virtual-memory/src/: main.rs
code/start-toolchain/: Cargo.toml
code/start-toolchain/src/: main.rs
docs/appendix/: go-rust-dict.md
docs/async/: basics.md  notify-watch.md  service-lifecycle.md  shared-state.md  task-control.md  tokio.md
docs/concurrency/: go-gmp.md  os-basics.md  threads.md
docs/engineering/: build-deploy.md  cargo-ecosystem.md  code-quality.md  network-testing.md  testing.md  tracing.md
docs/http/: arcswap.md  axum.md  http-from-scratch.md  middleware-shutdown.md  redis-cluster.md  redis.md  reqwest-resilience.md  rest.md  serde-json.md  sqlx.md
docs/lang/: basics.md  (+13 more)
scripts/: fix-doc-style.mjs  verify-doc-style.mjs
(+33 files in other folders)
