[workspace]
resolver = "2"
members = [
    "labkit",
    "start-toolchain",
    # 语言地基：一章一 crate，目录名 = docs 子目录 + 文件名（如 lang/basics.md → lang-basics）
    "lang-basics",
    "lang-control-flow",
    "lang-ownership",
    "lang-functions-closures",
    "lang-lifetimes",
    "lang-types-traits",
    "lang-pattern-matching",
    "lang-strings-slices",
    "lang-collections",
    "lang-iterators",
    "lang-generics",
    "lang-smart-pointers",
    "lang-error-handling",
    "lang-modules",
    "concurrency-threads",
    "network-layers",
    "network-addressing",
    "network-socket",
    "network-udp-sockets",
    "network-tcp",
    "network-http-protocol",
    "network-tls",
    "network-timeouts-retries",
    "network-debug-tools",
    "network-load-balancing",
    "network-proxy-nat",
    "network-quic-http3",
    "async-basics",
    "async-tokio",
    "async-shared-state",
    "http-http-from-scratch",
    "http-rest",
    "http-serde-json",
    "http-arcswap",
    "http-middleware-shutdown",
    "http-redis",
    "http-redis-cluster",
    "async-task-control",
    "async-notify-watch",
    "async-service-lifecycle",
    "http-reqwest-resilience",
    "engineering-testing",
    "engineering-network-testing",
    "engineering-tracing",
    "http-sqlx",
    "network-websocket",
    "network-mqtt",
    "network-rpc-grpc",
]

# 统一在这里管理版本，各成员用 `xxx = { workspace = true }` 引用。
# 类似 Go 里根 go.mod 统一依赖版本。
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
# CancellationToken 等 Tokio 周边工具（≈ Go 的 context 取消机制）。
tokio-util = "0.7"
# macros 特性：提供 #[axum::debug_handler]，把 handler 的天书报错翻译成人话（04a 课 §8）。
axum = { version = "0.8", features = ["macros"] }
# rc 特性：让 serde 能直接序列化 Arc<T>（第 06 课 ArcSwap 用得到）。
serde = { version = "1", features = ["derive", "rc"] }
arc-swap = "1"
# tokio-comp：走 Tokio 运行时；connection-manager：自带重连的多路复用连接。
redis = { version = "1", features = ["tokio-comp", "connection-manager"] }
# 带毫秒时间戳的日志宏(labkit)所依赖的时间库。
chrono = "0.4"
# 课程通用工具 crate，提供 logln! 宏。
labkit = { path = "labkit" }
# ---- 工程必备系列（11~13 课）----
serde_json = "1"
# tower 的 util 特性提供 ServiceExt::oneshot：不开端口直接测 axum 接口（11 课）。
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# tracing 三件套：门面 / 订阅端（env-filter 支持 RUST_LOG）/ axum 的请求跟踪层（12 课）。
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
# sqlx：异步 SQL 工具箱（13 课）。runtime-tokio 跑在 Tokio 上；macros 提供 FromRow 派生。
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros"] }
# 库风格错误派生（错误处理章），sqlx 章实战使用。
thiserror = "2"
# 应用风格错误盒子 + 上下文链（错误处理章）。
anyhow = "1"
# 底层 socket 选项：双栈、SO_REUSEPORT、非阻塞转换。
socket2 = { version = "0.5", features = ["all"] }
# HTTP 客户端；本教程示例只访问本地 HTTP，所以不额外开启 TLS。
reqwest = { version = "0.12", default-features = false, features = ["json"] }
# ---- TLS 演示（network-tls）----
# rcgen：现场生成自签名证书；rustls/tokio-rustls：纯 Rust 的 TLS 协议栈。
# 都关掉默认的 aws-lc-rs 加密后端换成 ring：aws-lc-rs 需要 cmake/nasm 等
# 原生构建工具，教学环境里容易编译失败；ring 只需要一个 C 编译器。
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
# ---- network-websocket：WebSocket echo（tokio-tungstenite）----
# 默认特性只有 connect+handshake，不带任何 TLS 后端；本课只连 ws://127.0.0.1，够用。
tokio-tungstenite = "0.30"
# sink 特性给 WebSocketStream 提供 SinkExt::send；std 特性给 StreamExt::next。
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
# ---- network-mqtt：最小 MQTT pub/sub（rumqttc）----
# 关掉默认的 use-rustls：本课只连本机明文 1883，不需要 TLS 协议栈，
# 顺带避免 rustls 默认加密后端 aws-lc-rs 在 Windows 上还要装 nasm/cmake 才能编译的问题。
rumqttc = { version = "0.25", default-features = false }
# ---- network-rpc-grpc：最小 gRPC helloworld（tonic + prost）----
# tonic 默认特性 = router+transport+codegen，本身就不含任何 tls-* 特性，天然明文 h2，不用额外关闭什么。
tonic = "0.14"
prost = "0.14"
# tonic 0.13 起把“读 .proto 生成代码”这部分拆到了 tonic-prost-build（build.rs 里用它），
# 它内部会拉 prost-build；tonic-build 只剩下不依赖 prost 的通用 codegen 基础设施。
tonic-prost-build = "0.14"
# 生成的代码里用到 tonic_prost::ProstCodec 做请求/响应编解码，这是运行期依赖
# （对应 build-dep 那个 tonic-prost-build，一个管编译期生成代码，一个管运行期编解码）。
tonic-prost = "0.14"
# ---- network-quic-http3：可选的真实 QUIC echo（quic-demo feature）----
# quinn 默认特性就是 rustls-ring（ring 加密后端），不像 rustls 单独引入时
# 默认走 aws-lc-rs，所以这里不需要像 network-tls 那样手动关默认特性换后端。
quinn = "0.11"
