[package]
name = "engineering-testing"
version = "0.1.0"
edition = "2021"

# 本课是纯库 crate（没有 main）：跑法是 cargo test -p engineering-testing

[lib]
name = "engineering_testing"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }

# dev-dependencies：只有编译测试时才引入，不进正式二进制。
# 对照 Go：go.mod 没有这个概念（测试依赖混在一起），Rust 分得清清楚楚。
[dev-dependencies]
# test-util：提供 tokio::time::pause / advance，以及 #[tokio::test(start_paused = true)]。
# full 特性不含它（刻意避免生产代码误开时间模拟）。Cargo 会把这里的 features 与
# [dependencies] 里的 tokio 合并，仅在 cargo test 时生效。
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
