[package]
name = "engineering-tracing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engineering-tracing"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
